# workshop-pdf-driven-rag

./: .env.example  .gitignore  1_basics_of_working_with_pdfs-complete.ipynb  1_basics_of_working_with_pdfs.ipynb  2_basic_rag-complete.ipynb  2_basic_rag.ipynb  3_pdfs_with_images-complete.ipynb  3_pdfs_with_images.ipynb  4_pdfs_simplified-complete.ipynb  4_pdfs_simplified.ipynb  README.md  example.env  main.py  preprocess_img_to_embeddings_cohere.py  preprocess_pdf_to_img.py  preprocess_pdf_to_md.py  pyproject.toml  requirements.txt  utils.py
data/embeddings/: embeddings_metadata.json  hai_embeddings_metadata.json  hai_image_embeddings.npy  image_embeddings.npy
data/parsed/: hai_ai_index_report_2025_chapter_2-parsed-text.md  hai_ai_index_report_2025_chapter_2-parsed-w-imgs.md  howto-free-threading-python-parsed-text.md  howto-free-threading-python-parsed-w-imgs.md  manual_bosch_WGG254Z0GR-parsed-text.md  manual_bosch_WGG254Z0GR-parsed-w-imgs.md
