[project]
name = "workshop-pdf-rag"
version = "0.1.0"
description = "Materials for the online workshop 'Building a PDF-driven RAG system with Weaviate'"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.8.1",
    "anthropic>=0.57.1",
    "chonkie[all]>=1.1.0",
    "cohere>=5.16.1",
    "docling>=2.41.0",
    "jupyter>=1.1.1",
    "numpy>=2.2.6",
    "pdf2image>=1.17.0",
    "python-dotenv>=1.1.1",
    "weaviate-client>=4.16.0",
]
